# bakkesmod-linux

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.py  pyproject.toml  run
.github/workflows/: injector_release.yml
src/bakkesmod_linux/: bakkesmod.py  config.py  constants.py  core.py  desktop.py  gui.py  utils.py
src/bakkesmod_linux/injector/: main.cpp
src/bakkesmod_linux/resources/: main.qss
src/py/: bakkesmod.py  constants.py  core.py  gui.py  utils.py
src/py/styles/: main.qss
src/resources/: README.md
