[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bakkesmod-linux"
version = "0.0.1"
description = "BakkesMod for linux"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PySide6>=6.6.0",
    "requests>=2.32.5"
]

[project.scripts]
bakkesmod = "bakkesmod_linux.core:main"

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[tool.setuptools.package-data]
bakkesmod_linux = ["resources/*"]

[tool.setuptools.packages.find]
where = ["src"]
